crates/lingui_macro/tests/snapshots/labeled_expressions__jsx_ph_labeled_expression_multiple_props.snap
---
source: crates/lingui_macro/tests/labeled_expressions.rs
info: {}
---
import { Trans, ph } from "@lingui/react/macro";
<Trans>Refresh {ph({foo: bar, baz: qux})} inbox</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

error: Incorrect usage of a labeled expression. Expected exactly one property as `{variableName: variableValue}`.
 --> input.tsx:2:20
  |
2 | <Trans>Refresh {ph({foo: bar, baz: qux})} inbox</Trans>;
  |                    ^^^^^^^^^^^^^^^^^^^^
